--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,32 @@
 arrow==0.12.1
 binaryornot==0.4.4
 certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 cookiecutter==1.6.0
+cssselect==1.0.3
 dnspython==1.16.0
 Flask==1.0.2
 Flask-PyMongo==2.2.0
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 jinja2-time==0.2.0
+lxml==4.3.3
 MarkupSafe==1.1.1
 numpy==1.16.2
 pandas==0.24.2
 poyo==0.4.1
 pymongo==3.7.2
+pyquery==1.4.0
 python-dateutil==2.8.0
 pytz==2018.9
+requests==2.21.0
 scipy==1.2.1
 simplejson==3.16.0
 six==1.12.0
+sportsreference==0.4.1
+urllib3==1.24.2
 Werkzeug==0.15.2
 whichcraft==0.4.1
