--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,39 @@
+absl-py==0.7.1
 arrow==0.12.1
+astor==0.7.1
 binaryornot==0.4.4
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 cookiecutter==1.6.0
 cssselect==1.0.3
+cycler==0.10.0
 dnspython==1.16.0
 Flask==1.0.2
 Flask-PyMongo==2.2.0
+gast==0.2.2
+grpcio==1.20.1
 gunicorn==19.9.0
+h5py==2.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2>=2.10.1
 jinja2-time==0.2.0
+KDEpy==0.6.11
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+kiwisolver==1.1.0
 lxml==4.3.3
+Markdown==3.1
 MarkupSafe==1.1.1
+matplotlib==3.0.3
+mock==3.0.4
 numpy==1.16.2
 pandas==0.24.2
 poyo==0.4.1
+protobuf==3.7.1
 pymongo==3.7.2
+pyparsing==2.4.0
 pyquery==1.4.0
 python-dateutil==2.8.0
 pytz==2018.9
@@ -27,6 +42,11 @@ scipy==1.2.1
 simplejson==3.16.0
 six==1.12.0
 sportsreference==0.4.1
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
 urllib3==1.24.2
 Werkzeug==0.15.2
 whichcraft==0.4.1
+xlrd==1.2.0
