--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,10 @@ gunicorn==19.9.0
 h5py==2.9.0
 idna==2.8
 itsdangerous==1.1.0
-Jinja2>=2.10.1
+Jinja2==2.10.1
 jinja2-time==0.2.0
 KDEpy==0.6.11
+Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.1.0
@@ -37,6 +38,7 @@ pyparsing==2.4.0
 pyquery==1.4.0
 python-dateutil==2.8.0
 pytz==2018.9
+PyYAML==5.1
 requests==2.21.0
 scipy==1.2.1
 simplejson==3.16.0
